# advent-of-code-2023

./: .gitignore  Build.hs  README.md  aoc2023.cabal  cabal.project  cabal.project.freeze  flake.nix  reflections.md  stack.yaml
.github/workflows/: cachix.yml  test.yml
2023/: aoc-conf.yaml  aoc2023.cabal
2023/app/: runner-2023.hs
2023/bench/: Bench.hs
2023/src/: AOC2023.hs
2023/src/AOC/Challenge/AOC2023/: Day01.hs  Day02.hs  Day05.hs  Day06.hs
2023/src/AOC2023/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
2023/test/: Spec.hs
app/: aoc-runner.hs
common/: aoc-common.cabal
common/src/AOC/: Common.hs  Discover.hs  Prelude.hs  Run.hs  Solver.hs
common/src/AOC/Common/: FinitarySet.hs  Point.hs  Search.hs
common/src/AOC/Run/: Interactive.hs  Load.hs
core/: aoc-core.cabal
core/src/AOC/: Discover.hs  Run.hs  Solver.hs  Util.hs
core/src/AOC/Main/: Bench.hs  Runner.hs  Spec.hs
core/src/AOC/Run/: Config.hs  Interactive.hs  Load.hs
core/src/AOC/Util/: DynoMap.hs
reflections/: day01.md  day02.md  day05.md
reflections-out/: day01.md  day02.md  day05.md
script/: generate_days.hs  open_files.vim
src/AOC/: Challenge.hs  Common.hs  Discover.hs  Prelude.hs  Solver.hs
src/AOC/Challenge/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
src/AOC/Common/: Point.hs
template/: DayXX.hs
test-data/2023/: 01a.txt  01b.txt  02a.txt  02b.txt  04a.txt  04b.txt  05a.txt  05b.txt  06a.txt  06b.txt  07a.txt  07b.txt  08a.txt  08b.txt  09a.txt  09b.txt  10a.txt  10b.txt  11a.txt  11b.txt  12a.txt  12b.txt  13a.txt  13b.txt  14a.txt  14b.txt  15a.txt  15b.txt  16a.txt  16b.txt  17a.txt  17b.txt  18a.txt  18b.txt  19a.txt  19b.txt  20a.txt  21a.txt  22a.txt  23a.txt  (+3 more)
