cabal-version:  2.4
name:           aoc2023

version:        0.1.0.0
synopsis:       Development environment for Advent of Code challenges
description:    Scaffolding for an integrated development environment for Advent of Code
                challenges.  Includes auto-runner, prompt displays and countdowns, and
                integrated submissions.
category:       Web
homepage:       https://github.com/mstksg/advent-of-code#readme
bug-reports:    https://github.com/mstksg/advent-of-code/issues
author:         Justin Le
maintainer:     justin@jle.im
copyright:      (c) Justin Le 2021
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type:                git
  location:            https://github.com/mstksg/advent-of-code-dev.git

common common-options
  build-depends:       base >=4.7 && <5
                     , aoc-common
                     , aoc-core
                     , bitvec
                     , comonad
                     , conduino >= 0.2.4
                     , containers
                     , data-default-class
                     , data-interval
                     , data-memocombinators
                     , deepseq
                     , fgl
                     , fin
                     , finitary
                     , finite-typelits
                     , foldl
                     , ghc-typelits-natnormalise
                     , groups
                     , hashable
                     , lens
                     , linear
                     , megaparsec
                     , microlens-th
                     , mtl
                     , nonempty-containers
                     , parallel
                     , parser-combinators
                     , pointedlist
                     , profunctors
                     , psqueues
                     , recursion-schemes
                     , safe
                     , semigroupoids
                     , split
                     , strict-tuple
                     , text
                     , transformers
                     , vector
                     , vector-algorithms
                     , vector-sized

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wno-partial-type-signatures
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:
      AllowAmbiguousTypes
      ApplicativeDo
      BangPatterns
      BlockArguments
      DataKinds
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      ImplicitParams
      KindSignatures
      LambdaCase
      MonadComprehensions
      MultiParamTypeClasses
      MultiWayIf
      NumDecimals
      OverloadedLabels
      PartialTypeSignatures
      PatternGuards
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeOperators
      UndecidableInstances
      ViewPatterns

library
  import:              common-options
  exposed-modules:
      AOC2023
      AOC2023.Day01
      AOC2023.Day02
      AOC2023.Day03
      AOC2023.Day04
      AOC2023.Day05
      AOC2023.Day06
      AOC2023.Day07
      AOC2023.Day08
      AOC2023.Day09
      AOC2023.Day10
      AOC2023.Day11
      AOC2023.Day12
      AOC2023.Day13
      AOC2023.Day14
      AOC2023.Day15
      AOC2023.Day16
      AOC2023.Day17
      AOC2023.Day18
      AOC2023.Day19
      AOC2023.Day20
      AOC2023.Day21
      AOC2023.Day22
      AOC2023.Day23
      AOC2023.Day24
      AOC2023.Day25
  other-modules:
      Paths_aoc2023
  hs-source-dirs:
      src
  other-modules:
      Paths_aoc2023

executable aoc2023
  import: common-options
  main-is: runner-2023.hs
  hs-source-dirs:
      app
  build-depends:
      ansi-terminal
    , aoc2023
    , aoc-core
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite aoc2023-test
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , ansi-terminal
    , aoc2023
    , aoc-core
  default-language: Haskell2010

benchmark aoc2023-bench
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  hs-source-dirs:
      bench
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , ansi-terminal
    , aoc2023
    , aoc-core
  default-language: Haskell2010
