cabal-version:  2.4
name:           aoc-common

version:        0.1.0.0
synopsis:       Development environment for Advent of Code challenges
description:    Scaffolding for an integrated development environment for Advent of Code
                challenges.  Includes auto-runner, prompt displays and countdowns, and
                integrated submissions.
category:       Web
homepage:       https://github.com/mstksg/advent-of-code#readme
bug-reports:    https://github.com/mstksg/advent-of-code/issues
author:         Justin Le
maintainer:     justin@jle.im
copyright:      (c) Justin Le 2021
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type:                git
  location:            https://github.com/mstksg/advent-of-code-dev.git

common common-options
  build-depends:       base >=4.7 && <5
                     , aoc-core
                     , bitvec
                     , comonad
                     , containers
                     , data-memocombinators
                     , deepseq
                     , fgl
                     , fin
                     , finitary
                     , finite-typelits
                     , foldl
                     , ghc-typelits-natnormalise
                     , groups
                     , hashable
                     , lens
                     , linear
                     , megaparsec
                     , mtl
                     , nonempty-containers
                     , parallel
                     , parser-combinators
                     , psqueues
                     , recursion-schemes
                     , safe
                     , semigroupoids
                     , split
                     , strict-tuple
                     , text
                     , time
                     , transformers
                     , vector
                     , vector-algorithms
                     , vector-sized

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wno-partial-type-signatures
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:
      AllowAmbiguousTypes
      ApplicativeDo
      BangPatterns
      BlockArguments
      DataKinds
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      ImplicitParams
      KindSignatures
      LambdaCase
      MonadComprehensions
      MultiParamTypeClasses
      MultiWayIf
      NumDecimals
      OverloadedLabels
      PartialTypeSignatures
      PatternGuards
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeOperators
      UndecidableInstances
      ViewPatterns

library
  import:              common-options
  exposed-modules:
      AOC.Common
      AOC.Common.FinitarySet
      AOC.Common.Point
      AOC.Common.Search
      AOC.Prelude
  other-modules:
      Paths_aoc_common
  hs-source-dirs:
      src
  other-modules:
      Paths_aoc_common
