cabal-version:  2.4
name:           aoc-core

version:        0.1.0.0
synopsis:       Advent of Code data model and environment setup
description:    Data model for AoC solutions and also exectuable for setting
                up environments and submissions.
category:       Web
homepage:       https://github.com/mstksg/advent-of-code#readme
bug-reports:    https://github.com/mstksg/advent-of-code/issues
author:         Justin Le
maintainer:     justin@jle.im
copyright:      (c) Justin Le 2021
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type:                git
  location:            https://github.com/mstksg/advent-of-code-dev.git

common common-options
  build-depends:       base >=4.7 && <5
                     , advent-of-code-api >=0.2.9
                     , criterion
                     , aeson
                     , ansi-terminal
                     , bytestring
                     , constraints
                     , constraints-extras
                     , containers
                     , data-default-class
                     , deepseq
                     , dependent-sum
                     , directory
                     , filepath
                     , haskeline
                     , megaparsec
                     , mtl
                     , pandoc
                     , parser-combinators
                     , tagsoup
                     , template-haskell
                     , text
                     , th-abstraction
                     , time
                     , transformers
                     , yaml

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wno-partial-type-signatures
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:
      AllowAmbiguousTypes
      ApplicativeDo
      BangPatterns
      BlockArguments
      DataKinds
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      ImplicitParams
      KindSignatures
      LambdaCase
      MonadComprehensions
      MultiParamTypeClasses
      MultiWayIf
      NumDecimals
      OverloadedLabels
      PartialTypeSignatures
      PatternGuards
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeOperators
      UndecidableInstances
      ViewPatterns

library
  import:              common-options
  exposed-modules:
      AOC.Discover
      AOC.Run
      AOC.Run.Config
      AOC.Run.Interactive
      AOC.Run.Load
      AOC.Solver
      AOC.Util
      AOC.Util.DynoMap
  other-modules:
      Paths_aoc_core
  hs-source-dirs:
      src
  other-modules:
      Paths_aoc_core
